<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="action_new_tab">New Tab</string>
    <string name="action_copy">Copy Link</string>
    <string name="settings">Settings</string>
    <string name="location">Location access</string>
    <string name="password">Save your passwords</string>
    <string name="apache">Apache License 2.0</string>
    <string name="version">Application Version</string>
    <string name="clear_cache">Clear cache on exit</string>
    <string name="enable_cookies">Enable cookies</string>
    <string name="recommended">Recommended</string>
    <string name="cliqz_search_hint">Cliqz Search</string>
    <string name="fullScreenOption">Hide status bar while browsing</string>
    <string name="action_delete">Delete</string>
    <string name="action_download">Download</string>
    <string name="action_open">Open</string>
    <string name="action_ok">OK</string>
    <string name="dialog_download">Do you want to download this file?</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_warning">Warning</string>
    <string name="title_download_location">Set download folder</string>
    <string name="dialog_history">Would you like to clear browser history?</string>
    <string name="dialog_favorites">Would you like to clear favorites?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="title_text_size">Text Size</string>
    <string name="size_largest">Largest</string>
    <string name="size_large">Large</string>
    <string name="size_normal">Normal</string>
    <string name="size_small">Small</string>
    <string name="size_smallest">Smallest</string>
    <string name="title_error">Error</string>
    <string name="action_incognito">New Forget Tab</string>
    <string name="action_find">Find in Page</string>
    <string name="download_pending">Pending download</string>
    <string name="cannot_download">Can only download \"http\" or \"https\" URLs.</string>
    <string name="problem_download">Invalid URL encountered, cannot download</string>
    <string name="problem_location_download">Cannot download to the specified location</string>
    <string name="download_no_sdcard_dlg_title">No SD card</string>
    <string name="download_no_sdcard_dlg_msg">USB storage is required to download the file.</string>
    <string name="download_sdcard_busy_dlg_title">USB storage unavailable</string>
    <string name="download_sdcard_busy_dlg_msg">The storage is busy. To allow downloads, touch Turn Off USB Storage in the notification.</string>
    <string name="message_text_copied">Text copied to clipboard</string>
    <string name="message_url_copied">Url copied to clipboard</string>
    <string name="licenses">Policies and Licenses</string>
    <string name="block_ads">Block Ads</string>
    <string name="message_insecure_connection">Connection to this site is not secure:\n%1$s\nProceed anyway?</string>
    <string name="message_certificate_date_invalid">date of certificate is invalid</string>
    <string name="message_certificate_expired">certificate is expired</string>
    <string name="message_certificate_domain_mismatch">domain in certificate does not match the site domain</string>
    <string name="message_certificate_invalid">certificate is invalid</string>
    <string name="message_certificate_not_yet_valid">certificate is not yet valid</string>
    <string name="message_certificate_untrusted">certificate is not trusted</string>
    <string name="title_form_resubmission">Form Resubmission</string>
    <string name="message_form_resubmission">Would you like to resend the data?</string>
    <string name="action_allow">Allow</string>
    <string name="action_dont_allow">Don\'t Allow</string>
    <string name="title_sign_in">Sign In</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear_cookies_exit">Clear cookies on exit</string>
    <string name="clear_history_exit">Clear history on exit</string>
    <string name="untitled">Untitled</string>
    <string name="freeware">Freeware</string>
    <string name="android_open_source_project">Android Open Source Project</string>
    <string name="hphosts_ad_server_list">hpHosts Ad Server List</string>
    <string name="settings_general">General</string>
    <string name="settings_privacy">Privacy</string>
    <string name="settings_about">About</string>
    <string name="settings_about_explain">Details about version, author and license.</string>
    <string name="color_mode">Enable Color Mode</string>
    <string name="reading_mode">Reader Mode</string>
    <string name="loading">Loading…</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="app_name">Cliqz Browser</string>
    <string name="about_version_format" translatable="false">%1$s</string>
    <string name="theme">App Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="black_theme">Black Theme (AMOLED)</string>
    <string name="history">History</string>
    <string name="complementary_search_engine">Complementary search engine</string>
    <string name="next">Next</string>
    <string name="go">Go</string>
    <string name="show_onboarding_hints">Show hints</string>
    <string name="block_adult_content">Block explicit content</string>
    <string name="imprint">Imprint</string>
    <string name="what_is_humanweb">What is Human Web?</string>
    <string name="enable_human_web">Enable Human Web</string>
    <string name="humanweb">Human Web</string>
    <string name="about_humanweb_url">https://cliqz.com/en/whycliqz/human-web</string>
    <string name="share_link">Share using</string>
    <string name="shared_using">Shared with Cliqz for Android</string>
    <string name="gps_permission">Please enable GPS for better search results</string>
    <string name="open_in_new_tab">Open in new tab</string>
    <string name="open_in_incognito_tab">Open in new Forget Tab</string>
    <string name="not_shareable">This card is not shareable</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_favorites">Clear favorites</string>
    <string name="deleting_in_progress_message">Deleting…</string>
    <string name="add_to_favourites">Add to favorites</string>
    <string name="save_link">Save Link</string>
    <string name="device_registered" translatable="false">Device Registered</string>
    <string name="error_registering" translatable="false">Error registering the device</string>
    <string name="news_notification">News notifications</string>
    <string name="restore_top_sites">Restore most visited websites </string>
    <string name="message_restore_top_sites">Start page shows most-visited websites again</string>
    <string name="descr_search_bar">Search Bar</string>
    <string name="action_search_on_page">Find in page</string>
    <string name="in_page_search_next_result">In-page search next result</string>
    <string name="in_page_search_prev_result">In-page search previous result</string>
    <string name="close_in_page_search">Close in-page search</string>
    <string name="download_successful">Download completed</string>
    <string name="download_failed">Download failed</string>
    <string name="app_not_found">No suitable app found</string>
    <string name="settings_block_ads">Block Ads (Beta)</string>
    <string name="optimized_block_ads">Fair Blocking</string>
    <string name="what_does_optimized_mean">What is \'fair\'?</string>
    <string name="optimized_block_ads_description">The Cliqz Ad Blocker is in beta at the moment. The final version will provide the following options: Allow Fair Ads (default setting), Block All Ads, Allow All Ads.
More https://cliqz.com/whycliqz/adblocking</string>
    <string name="make_video_available_offline">View video offline</string>
    <string name="overview">Overview</string>
    <string name="open_tabs">Open Tabs</string>
    <string name="favorites">Favorites</string>
    <string name="antiphishing_dialog_title">Warning: deceptive website!</string>
    <string name="antiphishing_message">Cliqz has blocked access to %1$s because it has been reported as a phishing website.
Phishing websites disguise as other sites you may trust in order to trick you into disclosing your login, password or other sensitive information.
[Learn more|https://cliqz.com/en/whycliqz/anti-phishing]</string>
    <string name="antiphishing_walk_away">Back to safe site</string>
    <string name="antiphishing_ignore_danger">Continue despite warning</string>
    <string name="antitracking_header">Your data is protected</string>
    <string name="antitracking_header_disabled">Your data is not protected</string>
    <string name="antitracking_datapoints">Private data points have been removed</string>
    <string name="antitracking_datapoints_disabled">Anti-Tracking is turned off for this website</string>
    <string name="antitracking_tracking_companies">Tracking companies</string>
    <string name="antitracking_datapoints_count">Private data points</string>
    <string name="others">Others</string>
    <string name="download_started">Download Started</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="exit">Exit</string>
    <string name="view">View</string>
    <string name="tab_created">Tab created</string>
    <string name="home_title">Most visited sites and news</string>
    <string name="got_it">Got it</string>
    <string name="showcase_antitracking_message">Customize the protection of your data to your needs.&lt;br&gt;&lt;br&gt;
        \t![cc_enabled](ic_cc_enabled_white_bg) Protection enabled&lt;br&gt;
        \t![cc_disabled](ic_cc_whitelisted_white_bg) Protection disabled</string>
    <string name="showcase_antitracking_title">Control Center</string>
    <string name="showcase_search_message">Relevant results are shown instantly during search.</string>
    <string name="showcace_search_title">Result Cards</string>
    <string name="upload_file_title">Upload File Title</string>
    <string name="rate_us">Rate Cliqz Browser</string>
    <string name="autocompletion_enabled">Enable Autocompletion</string>
    <string name="request_desktop_site">Desktop Site</string>
    <string name="contact_cliqz">FAQs &amp; Support</string>
    <string name="antiphishing_header">You are safe</string>
    <string name="antiphishing_text">No phishing activities detected</string>
    <string name="antiphishing_desc">Anti-Phishing technology identifies and blocks potentially deceptive websites that try to get your passwords or account data before you visit the site.</string>
    <string name="learn_more"><u>Learn more</u></string>
    <string name="extension_version" translatable="false">Extension Version</string>
    <string name="activate">Activate</string>
    <string name="search_hint">Search</string>
    <string name="cookies">Cookies</string>
    <string name="cache">Cache</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url">https://cliqz.com/en/privacy-browser</string>
    <string name="eula">EULA</string>
    <string name="myoffrz_activation_description">Activate MyOffrz to receive attractive discounts and bargains.</string>
    <string name="action_later" tools:ignore="MissingTranslation">Later</string>
    <string name="action_take_survey" tools:ignore="MissingTranslation">Take Survey</string>
    <string name="user_sentiment_survey_first_line_msg" tools:ignore="MissingTranslation">Hello! We’d like to know your opinion about the Cliqz Browser. i</string>
    <string name="user_sentiment_survey_second_line_msg" tools:ignore="MissingTranslation">Please note: the service used for this survey, SurveyMonkey, records user IPs.</string>
</resources>