<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.cliqz.browser.settings.GeneralSettingsFragment"
        android:title="@string/settings_general" />
    <!-- <header
        android:fragment="com.cliqz.browser.fragment.DisplaySettingsFragment"
        android:title="@string/settings_display" /> -->
    <header
        android:fragment="com.cliqz.browser.settings.PrivacySettingsFragment"
        android:title="@string/settings_privacy" />
    <!--
    Removed as 1.0.2r2, restore if needed. The AdvancedSettingsFragment was removed after 9bf1786.
    <header
        android:fragment="com.cliqz.browser.settings.AdvancedSettingsFragment"
        android:title="@string/settings_advanced" /> -->
    <header
        android:fragment="com.cliqz.browser.settings.HumanWebSettings"
        android:title="@string/humanweb" />
    <header
        android:fragment="com.cliqz.browser.settings.AdBlockSettings"
        android:title="@string/settings_block_ads" />
    <header
        android:fragment="com.cliqz.browser.settings.AboutSettingsFragment"
        android:title="@string/settings_about"
        android:summary="@string/settings_about_explain" />
    <header
        android:title="@string/rate_us"
        android:id="@+id/rate_us"/>
    <header
        android:title="@string/imprint"
        android:id="@+id/imprint" />
    <header
        android:title="@string/contact_cliqz"
        android:id="@+id/feedback" />

</preference-headers>