<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="location"
            android:title="@string/location" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="allow_cookies"
            android:summary="@string/recommended"
            android:title="@string/cookies" />
        <!-- <CheckBoxPreference
            android:defaultValue="false"
            android:key="incognito_cookies"
            android:title="@string/incognito_cookies" /> -->
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="third_party"
            android:title="@string/third_party" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="password"
            android:summary="@string/recommended"
            android:title="@string/password" />
        <Preference
            android:key="clear_history"
            android:title="@string/clear_history" />
        <Preference
            android:key="restore_top_sites"
            android:title="@string/restore_top_sites"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="clear_cache_exit"
            android:title="@string/cache" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="clear_history_exit"
            android:title="@string/clear_history_exit" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="clear_cookies_exit"
            android:title="@string/clear_cookies_exit" />

</PreferenceScreen>