<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="pref_version"
        android:title="@string/version" />
    <Preference
        android:key="pref_arn"
        android:title="Device ARN" />
    <Preference
        android:key="pref_ext_ver"
        android:title="@string/extension_version" />
    <PreferenceCategory android:title="@string/licenses">
        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/privacy_policy_url"
                android:targetClass="com.cliqz.browser.main.MainActivity"
                android:targetPackage="@string/application_id" />
        </Preference>
        <Preference
            android:key="pref_eula"
            android:title="@string/eula">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.cliqz.browser.settings.EulaSettingActivity"
                android:targetPackage="@string/application_id" />
        </Preference>
        <Preference
            android:summary="@string/apache"
            android:title="@string/android_open_source_project">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.apache.org/licenses/LICENSE-2.0"
                android:targetClass="com.cliqz.browser.main.MainActivity"
                android:targetPackage="@string/application_id" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>