<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:background="?attr/controlCenterBackground">

    <TextView
        android:id="@+id/phishing_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:text="@string/antiphishing_header"
        android:textColor="?attr/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/anti_phising_icon"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/phishing_header"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_anti_phishing"
        android:tint="?attr/colorPrimary"
        android:scaleType="fitXY"
        android:layout_width="65dp"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/text_safe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/anti_phising_icon"
        android:paddingBottom="10dp"
        android:text="@string/antiphishing_text"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="?attr/textColorPrimary"
        android:layout_below="@+id/text_safe"
        android:padding="20dp"
        android:text="@string/antiphishing_desc"
        android:textSize="16sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle_bg_white"
        app:backgroundTint="?attr/colorPrimary"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/action_ok"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/learn_more"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:textColor="?attr/textColorPrimary"
        android:paddingTop="15dp"
        android:text="@string/learn_more"
        android:textSize="12sp"
        android:layout_alignParentRight="true" />

</RelativeLayout>
