<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeffffff"
    android:orientation="horizontal"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:text="@string/antiphishing_header"
            android:textColor="#2CBA84"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/anti_phising_icon"
            android:layout_width="65dp"
            android:layout_height="80dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/ic_anti_phishing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/antiphishing_text"
            android:textColor="#2CBA84"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/phishing_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:text="@string/antiphishing_desc"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_rectangle_bg"
            android:text="@string/action_ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/learn_more"
            android:layout_width="wrap_content"
            android:paddingTop="15dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/learn_more"
            android:textSize="12sp" />

    </RelativeLayout>


</LinearLayout>